# Open3D-py-extension

./: .gitignore  .gitmodules  PointCloud.py  README.md  bunny.pcd  exmaple.py  pyproject.toml  test_mesh.py  test_pipeline.py
data/: bunny.e57  bunny.las  bunny.npy
open3dpypro/: E57File.py  PointCloud.py  PointCloudMat.py  __init__.py  generator.py  processors.py  shmIO.py
