[project]
name = "open3d-py-extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [    
    "torch==2.5.0+cu124",
    "torchvision==0.20.0+cu124",
    "laspy>=2.6.1",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "pye57>=0.4.17",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "trimesh>=4.7.1",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
